# py-powerbi-report

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  getstarted.md  index.md  reference.rst  userguide.ipynb
docs/source/_build/doctrees/: environment.pickle  index.doctree  reference.doctree
docs/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/source/_build/html/_sources/: index.rst.txt
example/: Features Example with Sample Report.ipynb  ppr_measure_creator.xlsx
pypbireport/: __init__.py
pypbireport/constants/: bookmarks.py  charts.py  dax_code.py  shapes.py  structures.py
pypbireport/functions/: functions.py  pprlist.py
pypbireport/ms_dll_scripts/: get_open_reports.ps1
pypbireport/pbi/: pbibookmark.py  pbifile.py  pbimodel.py  pbireport.py  pbivisual.py  template_visuals.py
pypbireport/visuals/: preset_attrs.py  visuals_attrs.py
