[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'pypbireport'
version = '0.2.1'
authors = [
    {name='Ismael Miranda', email='ismaelmiranda11@hotmail.com'}
]
description = 'Package to manipulate Power BI report and model'
readme = 'README.md'
requires-python = '>=3.9'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]
dependencies = [
    "pandas >= 2",
    "pyyaml >= 6",
    "jsonpath-ng==1.5.3",
    "pythonnet==3.0.2",
    "Unidecode==1.3.6",
    "openpyxl >= 3"
]

[tool.setuptools.packages.find]
# where = ["."]
include = ["pypbireport", "pypbireport*"]
exclude = ["tests*"]
namespaces = true

[tool.setuptools]
include-package-data = true

[project.urls]
repository = 'https://github.com/IsmaelMiranda11/py-powerbi-report'
documentation = 'https://py-powerbi-report.readthedocs.io/en/latest/index.html'